--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -52,8 +52,8 @@
     </ion-slides>
   </div>
 
-  <ion-searchbar [(ngModel)]="filterText" (ionInput)="getItems()" ></ion-searchbar>
-
+  <!-- <ion-searchbar [(ngModel)]="filterText" (ionInput)="getItems()" ></ion-searchbar> -->
+  <p>{{ address }}</p>
   <ion-list inset>
     <ion-list-header>Product</ion-list-header>
     <ion-grid>
