--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -4,12 +4,15 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar>
-    <ion-title>tabs</ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
+<!-- <ion-tabs>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home" tabsHideOnSubPages="false"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Cart" tabIcon="information-circle" tabsHideOnSubPages="false"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Checkout" tabIcon="contacts"></ion-tab>
+</ion-tabs> -->
 
-</ion-content>
+<ion-tabs>
+  <ion-tab [root]="tab1Root" tabTitle="One" tabIcon="navigate"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Two" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Three" tabIcon="bookmarks"></ion-tab>
+</ion-tabs>
