--- a/src/pages/product-detail/product-detail.html
+++ b/src/pages/product-detail/product-detail.html
@@ -1,15 +1,13 @@
 
 <ion-header>
-
   <ion-navbar>
     <ion-title>product-detail</ion-title>
-
-  <ion-buttons end>
+    <ion-buttons end>
       <button ion-button (click)="goToCart()" >
-          <ion-icon name="cart"> {{cartCount}} </ion-icon>
-        </button>
-  </ion-buttons>
-</ion-navbar>
+        <ion-icon name="cart"> {{cartCount}} </ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 </ion-header>
 
 
@@ -19,14 +17,20 @@
     <ion-card-content>
       <ion-card-title> {{selectedProduct.productName}} </ion-card-title>
       <h3>Rp. {{selectedProduct.unitPrice | number }} </h3>
-      <div>
-        <button ion-button color="secondary" (click)="chatSeller(selectedProduct)" full>
-          <ion-icon name="chatboxes">Tanya Penjual</ion-icon>
-        </button>
-        <button ion-button (click)="addToCart(selectedProduct)" full>
-          <ion-icon name="basket">Beli Sekarang</ion-icon>
-        </button>
-      </div>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6>
+            <button ion-button color="secondary" (click)="chatSeller(selectedProduct)">
+              <ion-icon name="chatboxes">Tanya Penjual</ion-icon>
+            </button>
+          </ion-col>
+          <ion-col col-6>
+            <button ion-button (click)="addToCart(selectedProduct)">
+              <ion-icon name="basket">Beli Sekarang</ion-icon>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-card-content>
   </ion-card>
 </ion-content>
