--- a/src/pages/product-detail/product-detail.html
+++ b/src/pages/product-detail/product-detail.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-title>product-detail</ion-title>
+    <ion-title> {{selectedProduct.productName}} </ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToCart()" >
         <ion-icon name="cart"> {{cartCount}} </ion-icon>
