--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -5,14 +5,9 @@
   Ionic pages and navigation.
 -->
 
-<!-- <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home" tabsHideOnSubPages="false"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Cart" tabIcon="information-circle" tabsHideOnSubPages="false"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Checkout" tabIcon="contacts"></ion-tab>
-</ion-tabs> -->
-
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="One" tabIcon="navigate"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Two" tabIcon="person"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Three" tabIcon="bookmarks"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Cart" tabIcon="cart"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Transaksi" tabIcon="stats"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Akun" tabIcon="person"></ion-tab>
 </ion-tabs>
