--- a/src/pages/tabs/tabs.page.html
+++ b/src/pages/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" color="">
+  <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
